syntax = "proto3";

option java_multiple_files = true;
option java_package = "es.aramirez.todo";

package todo;

message PanelRequest {
    string name = 1;
}

message PanelResponse {
    string panelId = 1;
}

message TaskRequest {
    string panelId = 1;
    string title = 2;
}

message TaskResponse {
    string taskId = 1;
}

message ListPanelsRequest {}

message ListPanelsResponse {
    string panelId = 1;
    string title = 2;
}

message GetPanelRequest {
    string panelId = 1;
}

message GetPanelResponse {
    string panelId = 1;
    string title = 2;
    repeated Task tasks = 3;

    message Task {
        string taskId = 1;
        string title = 2;
    }
}

service PanelResource {
    rpc AddPanel (PanelRequest) returns (PanelResponse) {}
    rpc AddTask (TaskRequest) returns (TaskResponse) {}
    rpc ListPanels (ListPanelsRequest) returns (stream ListPanelsResponse) {}
    rpc GetPanel (stream GetPanelRequest) returns (stream GetPanelResponse) {}
}